Fixed the vertical alignment of the main flower of the banner

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ header {
 
 .banner-flower {
     width: 635px;
-    margin-top: 50px;
+    margin-bottom: -3px;
 }
 
 
